deploy/nemo-gateway/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nemo-gateway
  namespace: hacohen-flywheel
spec:
  to:
    kind: Service
    name: nemo-gateway
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
